--- a/index.html
+++ b/index.html
@@ -42,35 +42,53 @@
 
         <div class="about-item">
             <h1 class="header"> Made possible by Pets like you</h1>
-        </br>
+            </br>
             <!--<h2 class="subheader airs">NOW STREAMING ON MONTANA PBS PASSPORT</h2> -->
             <p class="about-content">You hear it at the end of every program: "Made possible by viewers like you." But
                 what about pets? Don't they deserve some recognition too? What if they want to
                 flaunt their local, Montana PBS pride?</p>
            </br>
-           <div class="video-container">
-            <div style="padding:56.25% 0 0 0;position:relative;"><iframe
+            <div class="video-container">
+                <div style="padding:56.25% 0 0 0;position:relative;"><iframe
                     src="https://player.vimeo.com/video/902019180?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
                     frameborder="0" allow="autoplay; fullscreen; picture-in-picture"
                     style="position:absolute;top:0;left:0;width:100%;height:100%;"
-                    title="PETS-PPINTB-2024-01_PetsClubAnnouncement_v1"></iframe></div>
+                    title="PETS-PPINTB-2024-01_PetsClubAnnouncement_v1"></iframe>
+                </div>
                 <script src="https://player.vimeo.com/api/player.js"></script>
-        </div>
-            <p class="about-content">Well now they can by joining our brand-new Pets Club! For a sustaining
+            </div>
+                <p class="about-content">Well now they can by joining our brand-new Pets Club! For a sustaining
                 membership of $15 a month, up to four of your furry or scaly or gilled or hooved
                 friends can become official members of the station and have photos of their
                 adorable selves wearing posh Montana PBS regalia (a bandana) broadcast on-air
                 and shared on our social media channels. Plus they'll get a personalized card and
                 a coupon for discounted treats and toys because they're just so good yes they are.</p>
-            </br>
+                </br>
             
         </div>
+ 
 
 
-        <div class="about-perks">
-            <h1 class="header"> How it works
+        <div class="about-item no-padding">
+            <h1 class="header"> How it works</h1>
 
-            </h1>
+            <div class="how-it-works-grid">
+                    <div class="how-it-works-box">
+                        <h2 class="about-content how">Join the Club</h2>
+                        <p class="about-content how">Click the "Join Now" button to sign up. We'll send you a welcome packet.  </p>
+                    </div>
+
+                    <div class="how-it-works-box">
+                        <h2 class="about-content how">Welcome Packet</h2>
+                        <p class="about-content how">After recieving your packet, put the bandana on your pet and take their photo.</p>
+                    </div>
+
+                    <div class="how-it-works-box">
+                        <h2 class="about-content how">Email us your pet pic</h2>
+                        <p class="about-content how">Email us your pet photo to pets@montanapbs.org and we will do the rest.</p>
+                    </div>
+            </div>
+           
 
         </div>
 
