--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
     <div class="about-container">
 
         <div class="about-item">
-            <h1 class="header"> Made possible by Pets like you</h1>
+            <h1 class="header"> See your <span class="simple-span">Pets</span> on Montana PBS!</h1>
+            <h2 class="about-content how">broadcast on-air and shared on our social media channels</h2>
             </br>
             <!--<h2 class="subheader airs">NOW STREAMING ON MONTANA PBS PASSPORT</h2> -->
             <p class="about-content">You hear it at the end of every program: "Made possible by viewers like you." But
@@ -74,21 +75,21 @@
 
             <div class="how-it-works-grid">
                     <div class="how-it-works-box">
-                        <h1 class="header">1</h1>
+                        <h1 class="header green">1</h1>
                         <h2 class="about-content how">Join the Club</h2>
-                        <p class="about-content how">Click the "Join Now" button to sign up. We'll send you a welcome packet.  </p>
+                        <p class="about-content how">Click the <a href="https://donate.montanapbs.org/kusm/pets-club" class="text-link"  target="_blank">JOIN NOW</a> button to sign up. We'll send you a welcome packet.  </p>
                     </div>
 
                     <div class="how-it-works-box">
                       
-                        <h1 class="header">2</h1>
+                        <h1 class="header green">2</h1>
                         <h2 class="about-content how">Welcome Packet</h2>
                         <p class="about-content how">After recieving your packet, put the bandana on your pet and take their photo.</p>
                     </div>
 
                     <div class="how-it-works-box">
                        
-                        <h1 class="header">3</h1>
+                        <h1 class="header green">3</h1>
                         <h2 class="about-content how">Email us your pet pic</h2>
                         <p class="about-content how">Email us your pet photo to <a href="mailto:pets@montanapbs.org">pets@montanapbs.org</a> and we will do the rest.</p>
                     </div>
