--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KKQMJ8953C"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KKQMJ8953C');
+</script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,7 +41,7 @@
     
 
         <div class="hero-item">
-            <img class="pet-group" src="images/pet-group.svg" alt="Montana PBS Logo">
+            <img class="pet-group" src="images/pet-group.svg" alt="Graphic of group of house pets">
                 <img class="pets-logo-image" src="images/white-pet-club-logo.svg" alt="Montana PBS Pets Club Logo">
                
         </div>
