--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="about-container">
 
         <div class="about-item">
-            <h1 class="header"> Watch your <span class="simple-span">Pets</span> on Montana PBS!</h1>
+            <h1 class="header"> Share your <span class="simple-span">Pets</span> on Montana PBS!</h1>
             <h2 class="about-content how">broadcast on-air and shared on our social media channels</h2>
             </br>
             <!--<h2 class="subheader airs">NOW STREAMING ON MONTANA PBS PASSPORT</h2> -->
