--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
            </br>
             <div class="video-container">
                 <div style="padding:56.25% 0 0 0;position:relative;"><iframe
-                    src="https://player.vimeo.com/video/902019180?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
-                    frameborder="0" allow="autoplay; fullscreen; picture-in-picture"
-                    style="position:absolute;top:0;left:0;width:100%;height:100%;"
-                    title="PETS-PPINTB-2024-01_PetsClubAnnouncement_v1"></iframe>
+                        src="https://player.vimeo.com/video/902019180?h=47c0327858&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                        frameborder="0" allow="autoplay; fullscreen; picture-in-picture"
+                        style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Join Pets Club"></iframe></div>
+                <script src="https://player.vimeo.com/api/player.js"></script>
                 </div>
                 <script src="https://player.vimeo.com/api/player.js"></script>
             </div>
